ℹ arrumando titulo do form de configurações do projeto

--- a/web/pages/projetos/formulario/index.html
+++ b/web/pages/projetos/formulario/index.html
@@ -15,7 +15,7 @@
         <meta name="author" content="Jannaina">
         <meta name="description" content="Organização de projetos com o sistema Planej">
 
-        <title> Planej | Seus projetos </title>
+        <title> Planej | Configure seu projeto </title>
     </head>
 
     <body>
