--- a/web/pages/login/login.html
+++ b/web/pages/login/login.html
@@ -7,6 +7,7 @@
         <link href="./styles.css" rel="stylesheet" />
         <link href="../../assets/styles/grid.css" rel="stylesheet" />
         <link href="../../assets/styles/headAndFooter.css" rel="stylesheet" />
+        <link href="../../assets/styles/padrao.css" rel="stylesheet" />
 
 
         <link rel="icon" href="../../assets/imgs/logo.png" type="image/svg" />
