--- a/web/pages/projetos/index.html
+++ b/web/pages/projetos/index.html
@@ -7,6 +7,7 @@
         <link href="./styles.css" rel="stylesheet" />
         <link href="./stylePopup.css" rel="stylesheet" />
         <link href="../../assets/styles/grid.css" rel="stylesheet" />
+        <link href="../../assets/styles/padrao.css" rel="stylesheet" />
         <link href="../../assets/styles/headAndFooter.css" rel="stylesheet" />
 
 
