📄padronizando css do formulário

--- a/web/pages/projetos/formulario/index.html
+++ b/web/pages/projetos/formulario/index.html
@@ -8,6 +8,7 @@
         <link href="../../../assets/styles/grid.css" rel="stylesheet" />
         <link href="../../../assets/styles/padrao.css" rel="stylesheet" />
         <link href="../../../assets/styles/headAndFooter.css" rel="stylesheet" />
+        <link href="../../../assets/styles/formStyle.css" rel="stylesheet" />
 
         <link rel="icon" href="../../../assets/imgs/logo.png" type="image/svg" />
 
@@ -115,8 +116,8 @@
                 </fieldset>
         
                 <fieldset class="btn">
-                    <a href="#"><button type="button"> Cancelar </button></a>
-                    <button type="submit"> Cadastrar </button>
+                    <a href="#"><button type="button" class="btnSecundario"> Cancelar </button></a>
+                    <button type="submit" class="btnPrincipal"> Cadastrar </button>
                 </fieldset>
             </form>
         </main>
