--- a/web/pages/suporte/index.html
+++ b/web/pages/suporte/index.html
@@ -4,11 +4,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Quicksand&display=swap" rel="stylesheet">
 
-        <link href="./styles.css" rel="stylesheet" />
+       
         <link href="./stylePopup.css" rel="stylesheet" />
         <link href="../../assets/styles/grid.css" rel="stylesheet" />
         <link href="../../assets/styles/padrao.css" rel="stylesheet" />
         <link href="../../assets/styles/headAndFooter.css" rel="stylesheet" />
+        <link href="../../assets/styles/formStyle.css" rel="stylesheet" />
+
+        <link href="./styles.css" rel="stylesheet" />
 
         <link rel="icon" href="../../assets/imgs/logo.png" type="image/svg" />
 
@@ -134,7 +137,7 @@
                                 <label> Mensagem: </label>
                                 <textarea></textarea>
                             </fieldset>
-                            <button> Enviar </button>
+                            <button class="btnPrincipal"> Enviar </button>
                         </form>
                     </div>
                 </div>
