✅ padronização do css do formulário

--- a/web/pages/empresas/index.html
+++ b/web/pages/empresas/index.html
@@ -4,11 +4,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Quicksand&display=swap" rel="stylesheet">
 
-        <link href="./styles.css" rel="stylesheet" />
+        
         <link href="./stylePopup.css" rel="stylesheet" />
         <link href="../../assets/styles/grid.css" rel="stylesheet" />
         <link href="../../assets/styles/padrao.css" rel="stylesheet" />
         <link href="../../assets/styles/headAndFooter.css" rel="stylesheet" />
+        <link href="../../assets/styles/formStyle.css" rel="stylesheet" />
+
+        <link href="./styles.css" rel="stylesheet" />
 
         <link rel="icon" href="../../assets/imgs/logo.png" type="image/svg" />
 
@@ -112,8 +115,8 @@
                             <input type="text" placeholder="Nome da empresa" />
                         </fieldset>
                         <fieldset class="btn">
-                            <a href="#"><button type="button"> Cancelar </button></a>
-                            <button type="submit"> Salvar </button>
+                            <a href="#"><button type="button" class="btnSecundario"> Cancelar </button></a>
+                            <button type="submit" class="btnPrincipal"> Salvar </button>
                         </fieldset>
                     </form>
                 </div>
@@ -136,8 +139,8 @@
                             <input type="text" placeholder="Nome da empresa" />
                         </fieldset>
                         <fieldset class="btn">
-                            <a href="#"><button type="button"> Cancelar </button></a>
-                            <button type="submit"> Cadastrar </button>
+                            <a href="#"><button type="button" class="btnSecundario"> Cancelar </button></a>
+                            <button type="submit" class="btnPrincipal"> Cadastrar </button>
                         </fieldset>
                     </form>
                 </div>
@@ -157,8 +160,8 @@
 
                     <form>
                         <fieldset class="btn">
-                            <a href="#"><button type="button"> Cancelar </button></a>
-                            <button type="submit"> Deletar </button>
+                            <a href="#"><button type="button" class="btnSecundario"> Cancelar </button></a>
+                            <button type="submit" class="btnPrincipal"> Deletar </button>
                         </fieldset>
                     </form>
                 </div>
