--- a/web/pages/login/login.html
+++ b/web/pages/login/login.html
@@ -4,11 +4,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Quicksand&display=swap" rel="stylesheet">
 
-        <link href="./styles.css" rel="stylesheet" />
+       
         <link href="../../assets/styles/grid.css" rel="stylesheet" />
         <link href="../../assets/styles/headAndFooter.css" rel="stylesheet" />
         <link href="../../assets/styles/padrao.css" rel="stylesheet" />
+        <link href="../../assets/styles/formStyle.css" rel="stylesheet" />
 
+        <link href="./styles.css" rel="stylesheet" />
 
         <link rel="icon" href="../../assets/imgs/logo.png" type="image/svg" />
 
@@ -52,7 +54,7 @@
                     </fieldset>
 
                     <div>
-                        <button type="submit"> Acessar </button>
+                        <button type="submit" class="btnPrincipal"> Acessar </button>
                     </div>
                 </form>
             </section>
